core/unpackaged/main/default/objects/Apple__c/fields/Apple_Color__c.field-meta.xml
<CustomField>
    <fullName>Apple_Color__c</fullName>
    <description>Color of the Apple</description>
    <label>Apple Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>