core/unpackaged/main/default/objects/Apple__c/fields/Apple_Type__c.field-meta.xml
<CustomField>
    <fullName>Apple_Type__c</fullName>
    <description>Type/species of Apple</description>
    <label>Apple Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuji</fullName>
            </value>
            <value>
                <fullName>Gala</fullName>
            </value>
            <value>
                <fullName>Granny Smith</fullName>
            </value>
            <value>
                <fullName>Honeycrisp</fullName>
            </value>
            <value>
                <fullName>Red Delicious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>