core/unpackaged/main/default/objects/Apple__c/fields/Apple_Weight__c.field-meta.xml
<CustomField>
    <fullName>Apple_Weight__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Weight of Apple (in KG).</description>
    <label>Apple Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>