core/unpackaged/main/default/objects/Apple__c/fields/Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Date__c</fullName>
    <description>Date the Apple was picked.</description>
    <label>Pick Date</label>
    <type>Time</type>
</CustomField>